--- a/responsiveness.css
+++ b/responsiveness.css
@@ -1,8 +1,7 @@
 /* Extra small devices (phones, 600px and down) */
 
 @media only screen and (max-width: 600px) {
-    .banner,
-    .content {
+    #header {
         display: block;
     }
     
