--- a/layout.css
+++ b/layout.css
@@ -32,7 +32,7 @@ svg{
     height: 100px;
     width: 100px;
     border-radius: 5%;
-    padding: 5px;
+    padding: 5px 5px 5px 5px;
 }
 #name{
     letter-spacing: 0.5em;
