--- a/layout.css
+++ b/layout.css
@@ -31,8 +31,9 @@ svg{
 #image{
     height: 100px;
     width: 100px;
+    margin: 20px;
     border-radius: 5%;
-    padding: 5px 5px 5px 5px;
+    padding: 5px;
 }
 #name{
     letter-spacing: 0.5em;
