--- a/layout.css
+++ b/layout.css
@@ -31,9 +31,8 @@ svg{
 #image{
     height: 100px;
     width: 100px;
-    margin: 20px;
-    border-radius: 5%;
-    padding: 5px;
+    border-radius: 50%;
+    position: absolute;
 }
 #name{
     letter-spacing: 0.5em;
